[gd_scene load_steps=9 format=3 uid="uid://da6wtt163uf5f"]

[ext_resource type="Script" path="res://Scripts/npc.gd" id="1_q1r7j"]
[ext_resource type="Texture2D" uid="uid://cjn2qa751do2q" path="res://Art/speech_bubble_large_spritesheet.png" id="2_agakd"]
[ext_resource type="PackedScene" path="res://Scenes/player_check.tscn" id="3_jj12n"]
[ext_resource type="Script" path="res://Scripts/DialogIndicator.gd" id="3_qq5qd"]

[sub_resource type="Animation" id="Animation_dvc26"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-27, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_lg3xl"]
resource_name = "floaty"
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(10, -0.25, 0, 0.25, 0, 10, -0.25, 0, 0.25, 0, 10, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(-30, 0, 0, 0.25, 0, -27, -0.25, 0, 0.25, 0, -30, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p5uc3"]
_data = {
"RESET": SubResource("Animation_dvc26"),
"floaty": SubResource("Animation_lg3xl")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qk04g"]
size = Vector2(12, 17)

[node name="NPC" type="RigidBody2D"]
gravity_scale = 0.0
script = ExtResource("1_q1r7j")

[node name="DialogIndicator" type="Sprite2D" parent="."]
position = Vector2(-1, -27)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_agakd")
script = ExtResource("3_qq5qd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="DialogIndicator"]
libraries = {
"": SubResource("AnimationLibrary_p5uc3")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 11.5)
shape = SubResource("RectangleShape2D_qk04g")

[node name="PlayerCheck" parent="." instance=ExtResource("3_jj12n")]
position = Vector2(3.8147e-06, 11)
scale = Vector2(-2.89913, -2.9273)

[connection signal="body_entered" from="PlayerCheck" to="." method="_on_player_check_body_entered"]
[connection signal="body_exited" from="PlayerCheck" to="." method="_on_player_check_body_exited"]
